# snappy

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  bandit.yaml  dev_requirements.txt  mypy.ini  pyproject.toml  requirements.txt  snappy.yaml  vscode.code-workspace
.github/workflows/: python_workflow.yml
example/app/: app.py  requirements.txt  snappy.yaml
snappy/: __init__.py  lambda_handler.py  request.py  types.py
snappy/cli/: Dockerfile  application.py  config.py  constants.py  styles.py
snappy/cli/commands/: attach.py  build.py  check.py  deploy.py  init.py  invoke.py  push.py  run.py  running.py  stop.py
snappy/cli/helpers/: common.py  docker_helpers.py  yaml_helpers.py
snappy/cli/helpers/aws/: ecr.py  general.py  iam.py  lambda_function.py
tests/: test_all_imports.py
